Add approach page.

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@ layout: default
   <div class="unit half">
     <h2>Simple</h2>
     <p>
-      Clara brings the best parts of rule engines into your code without the weight of an enterprise system.
+      Clara offers a simpler way to express domain knowledge in code, without the weight of an enterprise rule system.
     </p>
   </div>
   <div class="clear"></div>
     <div class="unit half">
       <h2>Expressive</h2>
       <p>
-        Clara keeps simple rules simple, but users can write rich logic or invoke external libraries when they need to.
+        Simple rules stay simple, but users can write rich logic or invoke external libraries when they need to.
       </p>
     </div>
 
@@ -70,15 +70,24 @@ for (QueryResult result: results)
   </div>
 
   <div class="grid">
-    <div class="unit whole">
+    <div class="unit half">
+    <h2>Drawn from multiple worlds</h2>
+    <p>
+      Clara aims to combine the best ideas from expert systems, functional programming, and the best known develpment practices.
+    </p>
+    <p>
+      <a href="/docs/approach/">Learn more about Clara's approach</a>.
+    </p>
+    </div>
+    <div class="unit half">
     <h2>And many other features...</h2>
     <p>Clara supports the features you'd expect from a rule engine, such as support for <a href="/docs/truthmaint">truth maintenance</a>,
       <a href="/docs/durability">durability</a>,
       <a href="/docs/inspection">rule activation explanations</a>, <a href="/docs/accumulators">accumulators to reason across sets of facts</a>,
       and others.
-      It also brings in the best ideas from functional programming, with strong immutability support making rule sessions easy to compose and work with.
     </p>
     </div>
+
   </div>
 
   <span class="take-action"><a href="/docs/firststeps/">Get Started</a></span>
