--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ layout: default
     </div>
     <div class="unit half">
     <h2>Easily used from Java</h2>
-    <p>Just include your rules as a resource in your and use Java Beans or Clojure records as facts.</p>
+    <p>Just include your rules as a resource and use Java Beans or Clojure records as facts.</p>
 {% highlight java %}
 List<QueryResult> results =
   RuleLoader.loadRules("clara.examples")
